<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Product Name"
            android:inputType="text" />

        <EditText
            android:id="@+id/input_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cost (what you paid)"
            android:inputType="numberDecimal"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/input_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Selling Price"
            android:inputType="numberDecimal"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/input_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Quantity"
            android:inputType="number"
            android:layout_marginTop="12dp" />



    </LinearLayout>
</ScrollView>
