<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <!-- Top Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_store"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0033EE"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@android:color/white" />



    <!-- Add Department Button -->
    <Button
        android:id="@+id/add_department_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Department"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp" />

    <!-- Department List -->
    <ListView
        android:id="@+id/department_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />
</LinearLayout>
