...
            android:layout_height="wrap_content"
            android:text="Refresh Schedule"
            app:cornerRadius="12dp"
            android:layout_marginTop="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_time_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit My Availability"
            app:cornerRadius="12dp"
            android:layout_marginTop="8dp" />
...
